--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ a{text-decoration: none;}
     <div class="container2">
         <ul class = "main-nav">
 
-            <li><a href="#" target = "blank">Album<i class='fa fa-angle-down'></i></a>
+            <li><a href="album.html" target = "blank">Album<i class='fa fa-angle-down'></i></a>
                 <ul>
                     <li><a href="album.html" target = "blank">Best</a></li>
                     <li><a href="latest.html" target = "blank">Latest</a></li>
@@ -190,7 +190,7 @@ a{text-decoration: none;}
                     <li><a href="tour.html" target = "blank">Tour</a></li>
                 </ul>
             </li>
-            <li class='sub-menu'> <a href="#">About<i class='fa fa-angle-down'></i></a>
+            <li class='sub-menu'> <a href="genre.html">About<i class='fa fa-angle-down'></i></a>
                 <ul>
                     <li><a href="genre.html" target = "blank">Genre</a></li>
                     <li><a href="history.html" target = "blank">History</a></li>
