--- a/index.html
+++ b/index.html
@@ -178,19 +178,19 @@ a{text-decoration: none;}
     <div class="container2">
         <ul class = "main-nav">
 
-            <li><a href="album.html" target = "blank">Album<i class='fa fa-angle-down'></i></a>
+            <li><a href="album.html" target = "blank">Album</a>
                 <ul>
                     <li><a href="album.html" target = "blank">Best</a></li>
                     <li><a href="latest.html" target = "blank">Latest</a></li>
                 </ul>
             </li>
-            <li><a href="#">News<i class='fa fa-angle-down'></i></a>
+            <li><a href="tour.html">News</a>
                 <ul>
                     <li><a href="https://www.imdb.com/title/tt26934645/?ref_=tt_mv_close" target = "blank">movie</a></li>
                     <li><a href="tour.html" target = "blank">Tour</a></li>
                 </ul>
             </li>
-            <li class='sub-menu'> <a href="genre.html">About<i class='fa fa-angle-down'></i></a>
+            <li class='sub-menu'> <a href="genre.html">About</a>
                 <ul>
                     <li><a href="genre.html" target = "blank">Genre</a></li>
                     <li><a href="history.html" target = "blank">History</a></li>
