--- a/follow.html
+++ b/follow.html
@@ -100,7 +100,7 @@ nave{ position: fixed; }
         </div>
         <h2 class="name">운영자</h2>
         <div class="follow-btn">
-            <button><a href="https://instagram.com/duksung_official?igshid=MzRlODBiNWFlZA==">Follow</a></button>
+            <button><a href="https://instagram.com/sonne_un?igshid=OGQ5ZDc2ODk2ZA==">Follow</a></button>
         </div>
         <div class="desc">
             콜드플레이 한국 팬페이지에 방문해 주셔서 감사합니다.
