--- a/index.html
+++ b/index.html
@@ -177,20 +177,19 @@ a{text-decoration: none;}
             <nav>
     <div class="container2">
         <ul class = "main-nav">
-
-            <li><a href="album.html" target = "blank">Album</a>
+            <li><a href="#" target = "blank">Album<i class='fa fa-angle-down'></i></a>
                 <ul>
                     <li><a href="album.html" target = "blank">Best</a></li>
                     <li><a href="latest.html" target = "blank">Latest</a></li>
                 </ul>
             </li>
-            <li><a href="tour.html">News</a>
+            <li><a href="#">News<i class='fa fa-angle-down'></i></a>
                 <ul>
                     <li><a href="https://www.imdb.com/title/tt26934645/?ref_=tt_mv_close" target = "blank">movie</a></li>
                     <li><a href="tour.html" target = "blank">Tour</a></li>
                 </ul>
             </li>
-            <li class='sub-menu'> <a href="genre.html">About</a>
+            <li class='sub-menu'> <a href="#">About<i class='fa fa-angle-down'></i></a>
                 <ul>
                     <li><a href="genre.html" target = "blank">Genre</a></li>
                     <li><a href="history.html" target = "blank">History</a></li>
@@ -214,7 +213,7 @@ a{text-decoration: none;}
     </tr>
 </table>
 </nav>
-<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="jquery-1.12.4.min.js"></script>
 <script>
     $('nav li').hover(
         function() {
