--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>main page</title>
+<title>Coldplay Korea by Sonne</title>
 <meta name = "Coldplay Korea" content = "콜드플레이 한국 페이지">
 <meta name = "viewport" content = "width = device-width, initial-scale = 1">
 <link href="css/style.css" rel="stylesheet">
